# Hubbard

./: Bethe1o.ipynb  Bethe1o.py  Bethe2o.ipynb  EuO.ipynb  EuO.py  Hubbard5o.ipynb  Hubbard5o.py  README.md  RuO2.ipynb  __init__.py  alter_mag.ipynb  check_hr2hk.ipynb  debug.ipynb  dist_nqs_hubbard5o.py  dmrg_EuO.py  dmrg_bethe1o.py  dmrg_hubbard3o_soc.py  dmrg_hubbard5o.py  make_basis.ipynb  nqs_bethe1o.py  pyproject.toml  time.json
examples/: DMRG.ipynb  ED.ipynb  FeO2.ipynb
examples/gGA/: Bethe1o.ipynb  Hubbard5o.ipynb  alter_mag.ipynb  dist_nqs_hubbard5o.py  hubbard3o_soc.ipynb  nqs_bethe1o.ipynb
gGA/: gutzwiller.py  main.py
gGA/data/: AtomicData.py  _keys.py  transforms.py
gGA/gutz/: __init__.py  ansatz.py  ghostG.py  hr2hk.py  kinetics.py  mixing.py
gGA/model/: __init__.py  operators.py
gGA/nao/: hf.py  lanczos.py  tonao.py
gGA/nn/: ansatz.py  ghostG.py  gostG.py  hr2hk.py  kinetics.py  loss.py  mixing.py  optimizer.py  scf.py
gGA/operator/: __init__.py  common_operators.py  operator.py  site_operator.py
gGA/solver/: __init__.py  dmrg_solver.py  ed_solver.py  graph_net.py  nqs_solver.py
gGA/test/: C_chain.vasp  C_cube.vasp  test_ansatz.py
gGA/utils/: __init__.py  constants.py  kronsum.py  safe_svd.py  tools.py  wannier.py
hubbard/data/: AtomicData.py  AtomicDataDict.py  transforms.py
hubbard/gutz/: ansatz.py  ghostG.py  hr2hk.py  kinetics.py  mixing.py
hubbard/nao/: hf.py
hubbard/operator/: operator.py
hubbard/solver/: _solver.py  dmrg_solver.py  nqs_solver.py
hubbard/test/: Bethe1o_insulator.npy  Bethe1o_metal.npy  C_chain.vasp  (+1 more)
(+7 files in other folders)
